--- a/iOS/VolvoxControllerApp/platforms/ios/www/index.html
+++ b/iOS/VolvoxControllerApp/platforms/ios/www/index.html
@@ -5,7 +5,7 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-        <link rel="stylesheet" type="text/css" href="css/normalize.min.css">
+        <link rel="stylesheet" type="text/css" href="css/skeleton.min.css">
         <link rel="stylesheet" type="text/css" href="css/index.css" />
     </head>
     <body>
@@ -13,23 +13,33 @@
         <div id="view"></div>
 
         <!-- Templates -->
-        <script type="text/html" id="tpl-locations">
+        <script type="text/html" id="tpl-list-locations">
             <header>
                 <p class="header_title"><%= header_title %></p>
             </header>
             <div class="body">
+                <% _.each(list_locations, function(item) { %>
+                    <li>
+                        <a href="/#/cities/<%= item.name %>"><%= item.name %></a>
+                    </li>
+                <% }); %>
             </div>
         </script>
 
-        <script type="text/html" id="tpl-sublocation">
+        <script type="text/html" id="tpl-list-props">
             <header>
                 <p class="header_title"><%= header_title %></p>
             </header>
             <div class="body">
+                <% _.each(list_properties, function(item) { %>
+                    <li>
+                        <a href="/<%= current_hash %>/<%= item.name %>"><%= item.name %></a>
+                    </li>
+                <% }); %>
             </div>
         </script>
 
-        <script type="text/html" id="tpl-resort">
+        <script type="text/html" id="tpl-prop-detail">
             <header>
                 <p class="header_title"><%= header_title %></p>
             </header>
